Squash bugs

--- a/src/main/resources/src/components/recipeeditor.sass
+++ b/src/main/resources/src/components/recipeeditor.sass
@@ -1,6 +1,12 @@
 @import ../vars
 
 .recipe-editor
+	overflow-y: auto
+	overflow-x: hidden
+	position: absolute
+	bottom: 0
+	top: 3.3125rem
+
 	.field
 		margin-bottom: .5rem
 		label
